SemanticFieldContent development